# vibe-rs

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.cursor/commands/: commit.md
.cursor/rules/: adr.mdc  build-and-iteration.mdc
assets/: README.md
assets/models/: README.md
crates/vibe_core/: Cargo.toml
crates/vibe_core/src/: error.rs  lib.rs  protocol.rs  world.rs  yaw.rs
crates/vibers-rs/: Cargo.toml
crates/vibers-rs/src/: components.rs  main.rs  resources.rs
crates/vibers-rs/src/db/: mod.rs  schema.rs
crates/vibers-rs/src/systems/: avatar.rs  camera.rs  free_camera.rs  mod.rs  network.rs  rendering.rs  tile_loader.rs
crates/vibers-sim/: Cargo.toml
crates/vibers-sim/src/: cli.rs  config.rs  db.rs  main.rs  net.rs  state.rs
docs/architecture/: README.md
docs/architecture/adr/: 009-application-protocol-envelope-v0.md  014-runtime-configuration-and-operations.md  README.md  index.md  template.md
docs/architecture/meta/: README.md  capability-map.md  vision.md
src/: components.rs  main.rs  resources.rs
src/db/: mod.rs  schema.rs
src/systems/: avatar.rs  camera.rs  database.rs  debug.rs  free_camera.rs  mod.rs  rendering.rs  tile_loader.rs
src/utils/: tile_utils.rs
