[workspace]
resolver = "2"
members = ["crates/vibe_core", "crates/vibers-sim", "crates/vibers-rs"]
default-members = ["crates/vibers-rs"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bevy = { version = "0.16", default-features = false, features = [
    "default",
    "animation",
    "x11",
    "wayland",
] }
bevy_atmosphere = { version = "0.13", features = ["nishita"] }
bevy_image = "0.16"
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
glam = { version = "0.29", features = ["serde"] }
image = "0.24"
postcard = { version = "1.1", features = ["alloc"] }
refinery = { version = "0.8", features = ["rusqlite-bundled"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.42", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.9", features = ["gzip"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Dev compile time: avoid codegen-units=1 and O3 on all deps (Bevy rebuilds become very slow).
# O1 + many codegen units is the usual Bevy dev compromise (still playable, much faster than O3+CU1).
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
debug = 1

[profile.dev.package."*"]
opt-level = 1
codegen-units = 256

# Optional: slightly more optimization for the binary only when iterating on vibers-rs itself.
[profile.dev.package.vibers-rs]
opt-level = 1
codegen-units = 32
